lesson4/k8s/author-vs-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
    - fault:
        delay:
          fixedDelay: 40s
          percent: 100
      match:
        - headers:
            injectDelay:
              exact: true
      route:
        - destination:
            host: authors
            subset: v1
          weight: 100
