lesson4/k8s/author-vs-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
    - fault:
        abort:
          httpStatus: 500
          percent: 100
      match:
        - headers:
            injectFault:
              exact: true
      route:
        - destination:
            host: authors
            subset: v1
          weight: 100
